Docker exercise checker example

--- a/docker-build/run-config/composer.json
+++ b/docker-build/run-config/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "byivo/test-folder",
+    "name": "byivo/mestre-dos-codigos-php-checker",
     "authors": [
         {
             "name": "Ivo",
