Add script to build a local image

--- a/docker-build/Dockerfile
+++ b/docker-build/Dockerfile
@@ -1,9 +1,10 @@
 FROM composer
 
-COPY docker-build/run-config/ /opt/exercises-checker
+COPY run-config/ /opt/exercises-checker
 WORKDIR /opt/exercises-checker
 RUN composer install
 
-COPY test /opt/exercises-checker/test
+ARG EXERCISE
+COPY test/${EXERCISE} /opt/exercises-checker/test
 
-ENTRYPOINT ./vendor/bin/phpunit
+ENTRYPOINT composer test
