--- a/docker-build/run-config/composer.json
+++ b/docker-build/run-config/composer.json
@@ -15,5 +15,8 @@
         "psr-4": {
             "Test\\": "test/"
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
